- (BUGF) fix for RHEL3 ppc imports
- (FEAT) use nameserver variable in network config in Anaconda when set
- (BUGF) sleep 5 seconds between power cycling systems
- (FEAT) support for /usr/bin/cobbler-register
- (FEAT) web UI search feature
- (FEAT) very simple "cobbler hardlink" command to optimize space in /var/www/cobbler
- (FEAT) new "change" trigger that runs on all adds/edits/removes/syncs

- Tue Mar 3 2009 - 1.4.3
- (BUGF) fix OMAPI support's (note: deprecated) usage of subprocess
- (BUGF) don't traceback on invalid cmd ("cobbler distro list --name=foo")
- (BUGF) fix import usage with --kickstart option (no more traceback)
- (BUGF) fix removal of images with child system objects
- (BUGF) make --rpmlist on repo use same parsing routes as the rest of cobbler
- (BUGF) default value for server override should be <<inherit>> not <inherit>
- (BUGF) ensure if virt bridge is set to "" it will apply the value from settings
- (BUGF) cobbler check should say path to config file is /etc/cobbler, not /var/lib
- (FEAT) enable cobblerweb username/pass logins when authing with spacewalk
- (BUGF) allow --kopts to take parameters that are shell quoted.
- (BUGF) allow kernel options to start with '-'
- (BUGF) Use shlex for parsing --kopts to allow a wider variety of kernel options
- (BUGF) prevent potential traceback when --template-file data isn't a hash
- (BUGF) anaconda doesn't honor nameserver always, set manually
- (BUGF) various post install network snippet fixes
- (BUGF) fix OMAPI support's (note: deprecated) usage of subprocess
- (SPEC) fix build for rawhide now that yaboot is included
- (BUGF) allow src and noarch arches for repo objects
- (BUGF) move to PyYAML for YAML implementation since it is better maintained
- (BUGF) fixed web-interface editing of ownership
- (BUGF) fixed web-interface editing of management classes
- (BUGF) don't run full sync in import, sync makes the install system unavailable for very short periods of time